# testsuite

./: .gitignore  README.md  TESTS.md  clean_logs.sh  first-run-of-tests.py  iterate_files.sh  logcat.sh  make-links.sh  merge-json.py  process-json.sh  settings.container.sh  settings.cori.sh  settings.cray.sh  settings.intel.sh  settings.oneapi.sh  settings.polaris.sh  settings.sh  setup.sh  spack-upstream.sh  temp.py  temp3.py  test-all-classic.sh  test-all.py  test-all.sh  test-of-test-all.py  test2-all.py  testlist.sh
E4S-cuda/: mfem  zfp  (+9 more)
validation_tests/arborx/: CMakeLists.txt  README.test  clean.sh  compile.sh  run.sh  setup.sh
validation_tests/axom/: CMakeLists.txt  compile.sh  setup.sh
validation_tests/butterflypack/: ButterflyPACK_config.fi  CMakeLists.txt  clean.sh  compile.sh  run.sh  setup.sh
validation_tests/chai/: CMakeLists.txt  chai-umpire-allocators.cpp  compile.sh  example.cpp  pinned.cpp  run.sh  setup.sh
validation_tests/conduit/: CMakeLists.txt  clean.sh  compile.sh  conduit_example.cpp  run.sh  setup.sh
validation_tests/dyninst/xmas_tree/: CMakeLists.txt  xmas_tree.cpp
validation_tests/faodel/examples/: CMakeLists.txt  README.md  clean.sh  compile.sh  run.sh
validation_tests/faodel/examples/common/: CMakeLists.txt  README.md
validation_tests/faodel/examples/common/bootstrap/: Makefile  bootstrap_example  bootstrap_example.cpp
validation_tests/faodel/examples/common/data_types/: Makefile  main.cpp  nodeid_example.cpp  resourceurl_example.cpp
validation_tests/faodel/examples/common/info_interface/: Makefile  info_interface.cpp
validation_tests/faodel/examples/common/logging_interface/: CMakeLists.txt  ClassA.cpp  ClassA.hh  ClassB.cpp  ClassB.hh  Makefile  example1_selectiveA.cpp  example2_disableB.cpp  logging_interface.cpp
validation_tests/faodel/examples/common/singleton/: Makefile  ServiceA.cpp  ServiceA.hh  ServiceB.cpp  ServiceB.hh  ServiceC.cpp  ServiceC.hh  singleton_example.cpp
validation_tests/faodel/examples/dirman/: Makefile  README.md  dirman1-preload-configuration.cpp  dirman2-runtime-define.cpp
validation_tests/faodel/examples/faodel-cli/: basic-startstop.sh
validation_tests/faodel/examples/kelpie/: CMakeLists.txt  README.md
validation_tests/faodel/examples/kelpie/nonet/: CMakeLists.txt
validation_tests/faodel/examples/kelpie/prod-con/: CMakeLists.txt  Globals.cpp  Globals.hh  prod-con.cpp
validation_tests/faodel/examples/lunasa/: CMakeLists.txt  README.md
validation_tests/faodel/examples/lunasa/bootstrap/: CMakeLists.txt  bootstrap_example.cpp
validation_tests/faodel/examples/lunasa/simple_ldo_send/: CMakeLists.txt  simple_ldo_send_example.cpp
validation_tests/faodel/examples/lunasa/simple_user_ldo_put/: CMakeLists.txt  simple_user_ldo_put_example.cpp
validation_tests/faodel/examples/nnti/: CMakeLists.txt  README.md
validation_tests/faodel/examples/nnti/cpp/: PingPong.cpp  example_utils.cpp  example_utils.hpp
validation_tests/faodel/examples/nnti/scripts/: do-configure
validation_tests/faodel/examples/old/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp
validation_tests/faodel/examples/opbox/: CMakeLists.txt  README.md
validation_tests/faodel/examples/services/: CMakeLists.txt  README.md
validation_tests/faodel/examples/whookie/: CMakeLists.txt  README.md
validation_tests/fftx/: CMakeLists.txt  README-testsuite.md  README.md  batch1d_test_driver.cpp  clean.sh  compile.sh  dftbatlib_test.cpp  perf_test_driver.cpp  poissonTest.cpp  psatd_test.cpp  quickie.cpp  run.sh  transformlib_test.cpp
validation_tests/flecsi/poisson/: CMakeLists.txt  caliper.config
validation_tests/flecsi/poisson/app/: CMakeLists.txt  analyze.cc  finalize.cc  initialize.cc  poisson.cc  problem.cc  solve.cc
validation_tests/flecsi/poisson/include/: analyze.hh  finalize.hh  initialize.hh  options.hh  poisson.hh  problem.hh  solve.hh  state.hh
validation_tests/flecsi/poisson/util/: plot.gp  plotit
validation_tests/fortrilinos/test-installation/: CMakeLists.txt
validation_tests/gotcha/: CMakeLists.txt  compile.sh  run.sh
validation_tests/hpx/: CMakeLists.txt  check_helper.hpp  clean.sh  compile.sh  run.sh  setup.sh  test_algorithm.cpp  test_distributed.cpp  test_future.cpp  test_gpu.cpp
validation_tests/petsc/petsc/: CMakeLists.txt  README.md  makefile
validation_tests/raja/: CMakeLists.txt  LICENSE  Makefile  README-testsuite.md  README.md  compile.sh  run.sh  setup.sh
validation_tests/raja/src/: CMakeLists.txt  example.cpp
validation_tests/strumpack/: CMakeLists.txt  clean.sh  compile.sh  run.sh  setup.sh  testPoisson2d.cpp  testPoisson2dMPIDist.cpp
validation_tests/superlu/: CMakeLists.txt  README.md  c_sample.c  clean.sh  compile.sh  run.sh  setup.sh
validation_tests/trilinos/: CMakeLists.txt  CTestConfig.cmake  c.sh  clean.sh  compile.sh  r.sh  r.sh.old  run.sh  run_template.sh  setup.sh  test.cmake
validation_tests/trilinos/Communicator/: Makefile  compile.sh  log  out  run.sh
validation_tests/trilinos/METISCoarsening/: clean.sh  compile.sh  log  out  run.sh
validation_tests/trilinos/MatrixFree/: Makefile.new  MatrixFree  MatrixFree.cpp  clean.sh  run.sh
validation_tests/trilinos/MultiLevelPreconditioner_Maxwell/: Makefile  README  clean.sh  log  run.sh
validation_tests/trilinos/MultiLevelPreconditioner_NonSym/: compile.sh  log  run.sh
validation_tests/trilinos/MultiLevelPreconditioner_Restart/: Makefile  MultiLevelPreconditioner_Restart.cpp  clean.sh  run.sh
validation_tests/trilinos/MultiLevelPreconditioner_Sym/: Makefile  compile.sh  run.sh
validation_tests/trilinos/RefMaxwell/: compile.sh  run.sh
validation_tests/trilinos/Scalability/: run.sh
validation_tests/trilinos/SelfSmoother/: Makefile  cxx_main.cpp  run.sh  setup.sh
validation_tests/trilinos/ValidateParams/: Makefile  compile.sh  cxx_main.cpp  run.sh
validation_tests/trilinos/Zoltan/: Makefile  Zoltan  compile.sh  run.sh  setup.sh
validation_tests/trilinos/Zoltan_hypergraph/: clean.sh  run.sh
validation_tests/umpire/: CMakeLists.txt  README.md  clean.sh  compile.sh  run.sh  setup.sh
(+1519 files in other folders)
