cmake_minimum_required(VERSION 3.13)
project(ie2d LANGUAGES Fortran)
find_package(ButterflyPACK REQUIRED)
find_package(OpenMP REQUIRED)
set(CMAKE_Fortran_FLAGS "${OpenMP_Fortran_FLAGS} ${CMAKE_Fortran_FLAGS}")
set(CMAKE_Fortran_IMPLICIT_LINK_LIBRARIES "${CMAKE_Fortran_IMPLICIT_LINK_LIBRARIES} ${OpenMP_Fortran_FLAGS}")

set(CMAKE_Fortran_FLAGS "-cpp ${CMAKE_Fortran_FLAGS}")
include(CheckFortranCompilerFlag)
check_fortran_compiler_flag("-ffree-line-length-none" COMPILER_GNU)
if (COMPILER_GNU)
set(CMAKE_Fortran_FLAGS "-fno-range-check -ffree-line-length-none -ffixed-line-length-none -fimplicit-none -lpthread ${CMAKE_Fortran_FLAGS}")
check_fortran_compiler_flag("-fallow-argument-mismatch" GNU10)
if (GNU10)
set(CMAKE_Fortran_FLAGS "-fallow-argument-mismatch ${CMAKE_Fortran_FLAGS}")
endif()
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
set(CMAKE_Fortran_FLAGS "-fno-range-check -fbacktrace -fbounds-check -Wconversion ${CMAKE_Fortran_FLAGS}")
endif()
endif()
check_fortran_compiler_flag("-no-prec-div" COMPILER_Intel)
if (COMPILER_Intel)
set(CMAKE_Fortran_FLAGS "-DIntel ${CMAKE_Fortran_FLAGS}")
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
set(CMAKE_Fortran_FLAGS "-traceback -debug full -check bounds ${CMAKE_Fortran_FLAGS}")
endif()
endif()

check_fortran_compiler_flag("Msmartalloc" COMPILER_PGI)
if (COMPILER_PGI)
set(CMAKE_Fortran_FLAGS "-Mextend -DPGI ${CMAKE_Fortran_FLAGS}")
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
set(CMAKE_Fortran_FLAGS "-O0 -g -Mbounds -Mdepchk -traceback ${CMAKE_Fortran_FLAGS}")
endif()
endif()

add_executable(ie2d EMCURV_Driver.f90 EMCURV_Module.f90)
target_link_libraries(ie2d PRIVATE ButterflyPACK::zbutterflypack)
